k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-cam
  namespace: automation
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: simple-cam
  template:
    metadata:
      labels:
        app: simple-cam
    spec:
      containers:
      - name: simple-cam
        image: registry.shaun-husain.com/simple-cam:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
