k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-cam-service
  namespace: automation
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.23
  selector:
    app: simple-cam
  ports:
  - name: http
    port: 80
    targetPort: 80
