k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-cam
  namespace: automation
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: simple-cam.shaun-husain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-cam-service
            port:
              number: 80
